--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
+spring.application.name=ProductDetailsService
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/productService
-spring.datasource.username=deep
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/productservice
+spring.datasource.username=productuser124
 #spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+# spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+server.port=${PS_PORT}
